openam-server-only/src/main/webapp/assets/css/style.css
/* ... */
div.borderPopUpGray{
    background:#FFFFFF;
    border-top:1px solid #999999;       
    border-left:1px solid #999999;      
    border-right:1px solid #999999;     
    border-bottom:1px solid #999999;    
    padding:0.625em;
}

/*Gray Boxes */
.headerBox{
    background-color: #0094d4;
    color: white;
    border: 1px solid #0094d4;
    border-top: none;
    font-size: 100%;
    font-weight: bold;
    padding: 0 1em 0.2em 1em;
    margin: 0;
}
.bodyBox{
    /* background-color: #e5e9ed;  */
    background-color: #efefef;
    padding:10px;
    padding: 1em;
    /* border: 1px solid #0094d4; */
    border: 1px solid #0094d4;
    border-bottom: none;
}
input.text, input[type="text"], input[type="checkbox"] {
    padding: 2px;
    margin-left: 10px;
}
/*Corners bottom*/
.xbGray1, .xbGray2, .xbGray3, .xbGray4 { display: block; overflow: hidden; height: 1px; border-left:1px solid #0094d4; border-right:1px solid #0094d4;}
.xbGray1 {height:2px;}
/*  .xbGray4 {background:#0094d4;}  */
.xbGray4 {background:#0094d4;}
.xbGray1, .xbGray2, .xbGray3{background:#e5e9ed;}
/*.xb1, .xb2, .xb3{background:#e5e9ed;}*/

.header{
    background: #0071a1;
    color:#FFFFFF;
    font-size:1.0em;
    font-weight:bold;
    line-height:2;
    padding:0pt 10px;
    height:28px;
    text-align:center;
}

/*New ForgeRock theme overrides*/

div  {
    font-family: sans-serif;
    font-size: 14px;
}

td {
    padding: 0;
}

tr {
    background: none !important;
}

.tabContent td, #defaultSummary td {
    padding-top: 10px;
}

#bd p {
    margin-top: 10px;
}

.LogTopBnd {
    display: none;
}

.LogMidBnd {
    width: 0;
    background: none !important;
}

.LogMidBnd + td {
    border: 1px solid #aaa !important;
    background-color: #ffffff;
}

.logTxtCpy {
    color: #333333;
}

button, button.buttonblue {
    background-image: none;
    background: #FFF;
    border: 0px;
    color: #004d6e;
    cursor: pointer;
    height: 1.7em;
    font-family: sans-serif;
    font-size: 14px;
    font-weight: bold;
    line-height: 1.4;
    margin: 0 1em 0 0;
    padding: 0px 18px;
    border-radius: 0;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    text-shadow: none;
    -webkit-text-shadow: none;
    -moz-text-shadow: none;
    box-shadow: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    -webkit-transition-property: background;
    -moz-transition-property: background;
    -o-transition-property: background;
    transition-property: background;
    -webkit-transition-duration: 0.1s;
    -moz-transition-duration: 0.1s;
    -o-transition-duration: 0.1s;
    transition-duration: 0.1s;
    -webkit-transition-timing-function: ease-in-out;
    -moz-transition-timing-function: ease-in-out;
    -o-transition-timing-function: ease-in-out;
    transition-timing-function: ease-in-out;
}

button:hover {
    color: #FFF;
    background: #0071a1;
}

button:disabled:hover {
    background: #0094d4;
}

button.buttonblue {
    color: #FFF;
    background: #004d6e;
}

button.buttonblue:hover {
    color: #FFF
    background: #00293b;
}

button.buttonblue:disabled:hover {
    background: #004d6e;
}

#wizard_c {
    top: 42px !important;
}

/* Add this attribute to the element that needs a tooltip */
[data-tooltip] {
    position: relative;
    z-index: 2;
    cursor: pointer;
}

/* Hide the tooltip content by default */
[data-tooltip]:before,
[data-tooltip]:after {
    visibility: hidden;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=0);
    opacity: 0;
    pointer-events: none;
}

/* Position tooltip above the element */
[data-tooltip]:before {
    position: absolute;
    bottom: 150%;
    margin-bottom: 5px;
    margin-left: -125px;
    padding: 7px;
    width: 250px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    background-color: #000;
    background-color: hsla(0, 0%, 20%, 0.9);
    color: #fff;
    content: attr(data-tooltip);
    text-align: center;
    font-size: 14px;
    line-height: 1.2;
}

/* Triangle hack to make tooltip look like a speech bubble */
[data-tooltip]:after {
    position: absolute;
    bottom: 150%;
    left: 50%;
    margin-left: -5px;
    width: 0;
    border-top: 5px solid #000;
    border-top: 5px solid hsla(0, 0%, 20%, 0.9);
    border-right: 5px solid transparent;
    border-left: 5px solid transparent;
    content: " ";
    font-size: 0;
    line-height: 0;
}

/* Show tooltip content on hover */
[data-tooltip]:hover:before,
[data-tooltip]:hover:after {
    visibility: visible;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
    filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
    opacity: 1;
}

.logo /* brand logo (make sure you set the width and height too) */
{
    background-image:url(../../images/login-logo.png);
    background-position: right;
    background-size: contain;
    width: 260px;
    height: 250px;
    margin: auto;
    background-repeat:no-repeat;
    display:block;
}

